<resources>
    <string name="app_name">MultipleAudioPlayer</string>
    <string name="notification_title">Mãe</string>
    <string name="notification_message">Olá filho. Sempre vamos jantar hoje?</string>
    <string name="second_notification_title">Amigo João</string>
    <string name="second_notification_content">Olá. Mais tarde sempre vamos ao cinema? Fico à espera da resposta</string>
    <string name="concurrent_notification_normal">Cenário das notificações</string>
    <string name="spatialization">Espacialização</string>
    <string name="speech_rate">Velocidade da voz</string>
    <string name="speech_timbre">Timbre</string>
    <string name="speech_pitch">Pitch</string>
    <string name="speech_voice">Vozes</string>
    <string name="scanning_scenario">Cenário Scanning</string>
    <string name="sample_text">União Europeia aprova carregador único para telemóveis, tablets e câmaras. Ao abrigo das novas regras, os consumidores deixarão de precisar de carregadores e cabos diferentes para os vários aparelhos electrónicos portáteis de pequena e média dimensão. Medida começará a ser aplicada no Outono de 2024. As novas regras não se aplicarão aos produtos colocados no mercado antes da data de aplicação.</string>
    <string name="spatialization_scenario">Cenário Espacialização</string>
    <string name="audio_properties_scenario">Cenário Propriedades de Aúdio</string>
    <string name="number_of_voices_label">Número de vozes</string>
    <string name="play_scenario_label">Reproduzir cenário</string>
    <string name="play_scenario_spatial_label">Reproduzir cenário espacialização</string>
    <string name="notification_scenario_no_spatialization">Notificação sem espacialização</string>
    <string name="notification_spatialization_first_scenario">Documento: Homem | Notificação: Mulher</string>
    <string name="notification_spatialization_second_scenario">Documento: Mulher | Notificação: Homem</string>
    <string name="scenario_spatialization_first_news_first_column">A seleção nacional de sub-17 perdeu, esta tarde, diante a França nos penáltis, por 6-5, e diz adeus à final do Campeonato da Europa do escalão, após o empate a dois golos nos 90 minutos.</string>
    <string name="scenario_spatialization_first_news_second_column">Na primeira meia-final, em Netanya, Israel, o médio Zaire Emery adiantou os gauleses, aos oito minutos, a formação das quinas deu a volta, pelo extremo Afonso Moreira, aos 12, e o médio-defensivo Dário Essugo, aos 20.</string>
    <string name="scenario_spatialization_second_news_first_column">Milhares de apoiantes de Sporting e Famalicão conviveram hoje em redor do Estádio Nacional, num ambiente salutar e de festa nas horas que antecederam a final da Taça de Portugal feminina de futebol, entre lisboetas e minhotas.</string>
    <string name="scenario_spatialization_second_news_second_column">Apesar de ter uma representação menor, o Famalicão contou, ainda assim, com algumas centenas de apoiantes, sendo que entre eles um total de 56 pessoas viajaram desde Ovar apenas para apoiar uma jogadora: Mariana Campino.</string>
    <string name="channel_to_configure">Canal a configurar</string>
    <string name="play_scenario_with_pauses">Reproduzir cenário com pausas</string>
    <string name="play_scenario_with_pauses_faster">Reproduzir cenário com pausas mais rápido</string>
    <string name="homescreen_scenario">Cenário homescreen</string>
    <string name="headers_paragraph_scenario">Cenário parágrafo e header</string>
    <string name="current_date">Segunda, 6 de Junho</string>
    <string name="current_time">12:00</string>
    <string name="medicine">Medicine</string>
    <string name="search">Pesquisa</string>
    <string name="accessibility_service_description">service description</string>
    <string name="accessibility_service_label">accessibility_Service</string>

    <string-array name="Voices">
        <item>Cristiano</item>
        <item>Ines</item>
    </string-array>

    <string name="first_notice">O Benfica sagrou-se campeão nacional de juniores de futebol pela 25.ª vez na sua história, ao bater em casa o Sp, Braga, por 3-0, na 14.ª e última jornada do Apuramento de Campeão da época 2021/22. Iuri Moreira (87 e 89 minutos) e Franculino Djú (90+6) marcaram os golos dos ‘encarnados’, que terminaram a prova com os mesmos 33 pontos do FC Porto (6-0 ao Estoril Praia), mas vantagem na diferença total de golos (35-14 contra 29-9).</string>

    <!--Scanning-->
    <string name="scanning_spatialization_one_voice">Uma voz</string>
    <string name="scanning_spatialization_two_voices">Duas vozes</string>
    <string name="scanning_spatialization_three_voices">Três vozes</string>
    <string name="scanning_spatialization_four_voices">Quatro vozes</string>
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="media_url_mp4">https://www2.iis.fraunhofer.de/AAC/ChID-BLITS-EBU-Narration.mp4</string>

</resources>