<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notification_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/concurrent_notification_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scanning_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanning_scenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_notification_scenario"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_spatialization_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spatialization_scenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_scanning_scenario"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_properties_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_properties_scenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_spatialization_scenario"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_homescreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homescreen_scenario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_properties_scenario"
        android:layout_marginTop="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>