<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_spatial_scenario_one_voice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanning_spatialization_one_voice"
        app:layout_constraintBottom_toTopOf="@id/btn_spatial_scenario_two_voices" />

    <Button
        android:id="@+id/btn_spatial_scenario_two_voices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanning_spatialization_two_voices"
        app:layout_constraintBottom_toTopOf="@id/btn_spatial_scenario_three_voices" />

    <Button
        android:id="@+id/btn_spatial_scenario_three_voices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanning_spatialization_three_voices"
        app:layout_constraintBottom_toTopOf="@id/btn_spatial_scenario_four_voices" />

    <Button
        android:id="@+id/btn_spatial_scenario_four_voices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanning_spatialization_four_voices"
        app:layout_constraintBottom_toTopOf="@id/cv_media_player_buttons" />

    <include
        android:id="@+id/cv_media_player_buttons"
        layout="@layout/custom_view_play_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>