<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/tv_document_sample"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/first_notice"
        app:layout_constraintBottom_toTopOf="@id/btn_notification_example"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notification_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/notification_spatialization_first_scenario"
        app:layout_constraintBottom_toTopOf="@id/btn_notification_example_second_scenario" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notification_example_second_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_spatialization_second_scenario"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>