<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_first_column"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/scenario_spatialization_second_news_first_column"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/btn_scenario"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_second_column"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:text="@string/scenario_spatialization_second_news_second_column"
        app:layout_constraintBottom_toTopOf="@id/btn_scenario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_scenario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_scenario_label"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>