<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_audio_channel_to_configure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/channel_to_configure"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_audio_channel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_audio_channel_to_configure" />

    <include
        android:id="@+id/main_document_properties"
        layout="@layout/item_audio_configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_audio_channel" />

    <include
        android:id="@+id/notification_properties"
        layout="@layout/item_audio_configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_audio_channel" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="main_document_properties, notification_properties" />

    <TextView
        android:id="@+id/tv_document_sample"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/sample_text"
        app:layout_constraintBottom_toTopOf="@id/btn_notification_no_spatialization"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notification_no_spatialization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_scenario_no_spatialization"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>